--- a/model/dataset_config_template.yaml
+++ b/model/dataset_config_template.yaml
@@ -1,3 +1,3 @@
-data_dir: '/path/to/data/directory'
+data_dir: '/path/to/data/directory/'
 tokenizer:
   pretrained_model_name_or_path: 'albert-base-v2'
